WOOSTIFY-202 #comment support ajax shop filter

--- a/assets/css/sass/woocommerce/product-page.scss
+++ b/assets/css/sass/woocommerce/product-page.scss
@@ -565,7 +565,9 @@
 		margin-right: auto $i;
 		display: none;
 		> h2 {
-			display: none;
+			&:first-child {
+				display: none;
+			}
 		}
 		table {
 			margin: 0;
