--- a/assets/css/sass/woocommerce/woocommerce.scss
+++ b/assets/css/sass/woocommerce/woocommerce.scss
@@ -171,7 +171,7 @@ $size: 40px;
 		position: relative;
 		border: 1px solid #ddd;
 		border-radius: 2px;
-		padding: 5px 15px;
+		padding: 5px 20px 5px 10px;
 		margin-bottom: 40px;
 
 		&:after {
