--- a/style.css
+++ b/style.css
@@ -6743,7 +6743,7 @@ footer#colophon {
   position: relative;
   border: 1px solid #ddd;
   border-radius: 2px;
-  padding: 5px 15px;
+  padding: 5px 20px 5px 10px;
   margin-bottom: 40px;
 }
 
@@ -7690,6 +7690,7 @@ footer#colophon {
   text-overflow: ellipsis;
   overflow: hidden;
   display: block !important;
+  line-height: 1.5;
 }
 
 .product-loop-meta .loading:before {
