--- a/assets/css/sass/base/base/typo.scss
+++ b/assets/css/sass/base/base/typo.scss
@@ -1,49 +1,51 @@
 select {
-    border: 1px solid #ccc;
-    -webkit-border-radius: 0;
-    -moz-border-radius: 0;
-    border-radius: 0;
-    max-width: 100%;
-    &:-moz-focusring{
-    	color: $tr;
-    	text-shadow: 0 0 0 #ccc;
-    }
+	border: 1px solid #ccc;
+	-webkit-border-radius: 0;
+	-moz-border-radius: 0;
+	border-radius: 0;
+	max-width: 100%;
+
+	&:-moz-focusring {
+		color: $tr;
+		text-shadow: 0 0 0 #ccc;
+	}
 }
 
-input{
-    border: 1px solid #ccc;
-    &[type=search] {
-        -webkit-appearance: none;
-    }
+input {
+	border: 1px solid #ccc;
+
+	&[type=search] {
+		-webkit-appearance: none;
+	}
 }
 
-textarea{
+textarea {
 	border: 1px solid #ccc;
 }
 
 input,
 textarea,
 button {
-    border-radius: 0;
-    max-width: 100%;
-    font-size: 14px;
+	border-radius: 0;
+	max-width: 100%;
+	font-size: 14px;
 }
 
 input[type="button"],
 input[type="submit"],
 input[type="reset"],
 input[type="file"],
-button{
-    -webkit-appearance: none;
-    cursor: pointer;
-    padding: 0;
-    border: 1px solid #ccc;
+button {
+	-webkit-appearance: none;
+	cursor: pointer;
+	padding: 0;
+	border: 1px solid #ccc;
 
-    &.disabled,
-    &:disabled{
+	&.disabled,
+	&:disabled {
 		pointer-events: none;
 		opacity: 0.5;
-		@include filter( grayscale, 100% );
+		@include filter(grayscale, 100%);
 	}
 }
 
@@ -53,73 +55,76 @@ h3,
 h4,
 h5,
 h6 {
-    clear: both;
-    margin: 15px 0;
+	clear: both;
+	margin: 15px 0;
 
-    a{
-        color: $inh
-    }
+	a {
+		color: $inh
+	}
 }
 
 p {
-    -webkit-margin-before: 0;
-    -webkit-margin-after: 0;
-    margin: 0 0 10px;
+	-webkit-margin-before: 0;
+	-webkit-margin-after: 0;
+	margin: 0 0 10px;
 }
 
 li {
-    ul,
-    ol {
-        padding-left: 0;
-        margin-left: 20px;
-    }
+
+	ul,
+	ol {
+		padding-left: 0;
+		margin-left: 20px;
+	}
 }
 
 b,
 strong {
-    font-weight: 700;
+	font-weight: 700;
 }
 
 dfn,
 cite,
 em,
 i {
-    font-style: italic;
+	font-style: italic;
 }
 
 blockquote {
-    font-weight: 300;
-    margin: 30px 0;
-    border-left: 4px solid #333;
-    padding-left: 30px;
-    position: relative;
-    clear: both;
-    display: block;
+	font-weight: 300;
+	margin: 30px 0;
+	border-left: 4px solid #333;
+	padding-left: 30px;
+	position: relative;
+	clear: both;
+	display: block;
 
-    p {
-        margin-bottom: 1.6667em;
+	p {
+		margin-bottom: 1.6667em;
 
-        &:last-child {
-            margin-bottom: 0;
-        }
-    }
-    cite,
-    small {
-        color: #333;
-        font-size: 16px;
-        line-height: 1.6;
-    }
-    em,
-    i,
-    cite {
-        font-style: normal;
-    }
+		&:last-child {
+			margin-bottom: 0;
+		}
+	}
+
+	cite,
+	small {
+		color: #333;
+		font-size: 16px;
+		line-height: 1.6;
+	}
+
+	em,
+	i,
+	cite {
+		font-style: normal;
+	}
 }
 
 address {
-    font-style: italic;
-    margin: 0 0 1.6em;
-    line-height: 24px;
+	font-style: italic;
+	margin: 0 0 1.6em;
+	line-height: 24px;
 }
 
 code,
@@ -128,113 +133,115 @@ tt,
 var,
 samp,
 pre {
-    font-family: Inconsolata, monospace;
-    -webkit-hyphens: none;
-    -moz-hyphens: none;
-    -ms-hyphens: none;
-    hyphens: none;
+	font-family: Inconsolata, monospace;
+	-webkit-hyphens: none;
+	-moz-hyphens: none;
+	-ms-hyphens: none;
+	hyphens: none;
 }
 
 pre {
-    background-color: rgba(0, 0, 0, 0.01);
-    border: 1px solid rgba(51, 51, 51, 0.1);
-    line-height: 24px;
-    margin-bottom: 1.6em;
-    max-width: 100%;
-    overflow: auto;
-    padding: 0.8em;
-    white-space: pre;
-    white-space: pre-wrap;
-    word-wrap: break-word;
+	background-color: rgba(0, 0, 0, 0.01);
+	border: 1px solid rgba(51, 51, 51, 0.1);
+	line-height: 24px;
+	margin-bottom: 1.6em;
+	max-width: 100%;
+	overflow: auto;
+	padding: 0.8em;
+	white-space: pre;
+	white-space: pre-wrap;
+	word-wrap: break-word;
 }
 
 mark,
 ins {
-    text-decoration: none;
-    word-break: normal;
+	text-decoration: none;
+	word-break: normal;
 }
 
 sup,
 sub {
-    font-size: 75%;
-    height: 0;
-    line-height: 0;
-    position: relative;
-    vertical-align: baseline;
+	font-size: 75%;
+	height: 0;
+	line-height: 0;
+	position: relative;
+	vertical-align: baseline;
 }
 
 sup {
-    bottom: 1ex;
+	bottom: 1ex;
 }
 
 sub {
-    top: .5ex;
+	top: .5ex;
 }
 
 small {
-    font-size: 75%;
+	font-size: 75%;
 }
 
 big {
-    font-size: 125%;
+	font-size: 125%;
 }
 
 // ELEMENTS
 hr {
-    background-color: #eaeaea;
-    background-color: rgba(51, 51, 51, 0.1);
-    border: 0;
-    height: 1px;
-    margin: 15px 0;
+	background-color: #eaeaea;
+	background-color: rgba(51, 51, 51, 0.1);
+	border: 0;
+	height: 1px;
+	margin: 15px 0;
 }
 
 table,
 th,
 td {
-    border: 1px solid #ddd;
+	border: 1px solid #ddd;
 }
 
 table {
-    border-collapse: collapse;
-    border-spacing: 0;
-    margin: 20px 0;
-    table-layout: fixed;
-    max-width: 100%;
-    .woocommerce & {
-        width: 100%;
-    }
+	border-collapse: collapse;
+	border-spacing: 0;
+	margin: 20px 0;
+	table-layout: fixed;
+	max-width: 100%;
+
+	.woocommerce & {
+		width: 100%;
+		table-layout: auto;
+	}
 }
 
 caption,
 th,
 td {
-    font-weight: normal;
-    text-align: left;
+	font-weight: normal;
+	text-align: left;
 }
 
 tbody {
-    th {
-        background: #fff;
-    }
+	th {
+		background: #fff;
+	}
 }
 
 thead th {
-    border-width: 0 1px 1px 0;
-    font-weight: 700;
+	border-width: 0 1px 1px 0;
+	font-weight: 700;
 }
 
 td {
-    border-width: 0 1px 1px 0;
+	border-width: 0 1px 1px 0;
 }
 
 th,
 td {
-    padding: 5px 10px;
-    line-height: 24px;
+	padding: 5px 10px;
+	line-height: 24px;
 }
 
 del {
-    opacity: 0.8;
+	opacity: 0.8;
 }
 
 
@@ -242,51 +249,55 @@ del {
 /* Placeholder text color -- selectors need to be separate to work. */
 
 @mixin placeholder {
-    &::-webkit-input-placeholder {
-        @content
-    }
-    &:-moz-placeholder {
-        @content
-    }
-    &::-moz-placeholder {
-        @content
-    }
-    &:-ms-input-placeholder {
-        @content
-    }
+	&::-webkit-input-placeholder {
+		@content
+	}
+
+	&:-moz-placeholder {
+		@content
+	}
+
+	&::-moz-placeholder {
+		@content
+	}
+
+	&:-ms-input-placeholder {
+		@content
+	}
 }
 
 input {
-    @include placeholder {
-        color: $inh
-    }
+	@include placeholder {
+		color: $inh
+	}
 }
 
 textarea {
-    max-width: 100%;
-    @include placeholder {
-        color: $inh
-    }
+	max-width: 100%;
+
+	@include placeholder {
+		color: $inh
+	}
 }
 
 a {
-    text-decoration: none;
-    @extend .duration;
+	text-decoration: none;
+	@extend .duration;
 }
 
 dl {
-    margin: 0 0 1.75em;
-    line-height: 24px;
+	margin: 0 0 1.75em;
+	line-height: 24px;
 }
 
 dt {
-    font-weight: 700;
+	font-weight: 700;
 }
 
 dd {
-    margin: 0 0 10px;
+	margin: 0 0 10px;
 }
 
 .rtl {
-    direction: rtl
+	direction: rtl
 }
