WOOSTIFY-218 #comment update fỏ dokan plugin #done

--- a/assets/css/sass/base/layout/widgets.scss
+++ b/assets/css/sass/base/layout/widgets.scss
@@ -116,6 +116,12 @@
 		@extend .duration;
 	}
 
+	.media-toolbar & {
+		&:after {
+			content: none;
+		}
+	}
+
 	.search-field {
 		border-color: $tr;
 		height: 100%;
