--- a/assets/css/sass/woocommerce/account-page.scss
+++ b/assets/css/sass/woocommerce/account-page.scss
@@ -6,6 +6,13 @@
 		text-align: center;
 	}
 
+	@media (min-width: $screen-md) {
+		#content {
+			min-height: 700px;
+			min-height: 90vh;
+		}
+	}
+
 	.entry-title{
 		margin-bottom: 50px;
 	}
@@ -88,9 +95,8 @@
     @media ( min-width: $screen-md ) {
     	float: left;
         margin-bottom: 0;
-        max-width: 270px;
+        width: 270px;
         margin-right: 30px;
-        padding-right: 100px;
         border-right: 1px solid #eee;
     }
 
@@ -157,8 +163,27 @@
 	        }
 	    }
 
+	    &--support-tickets {
+	    	a:before{
+	            content: "\e63b";
+	        }
+	    }
+
+	    &--following {
+	    	a:before{
+	            content: "\e63d";
+	        }
+	    }
+
+	    &--rma-requests {
+	    	a:before{
+	            content: "\e66f";
+	        }
+	    }
+
         a{
             font-size: 15px;
+            white-space: nowrap;
             @include flex( flex, flex-start, center );
 
             &:before{
@@ -181,7 +206,7 @@
 
     @media ( min-width: $screen-md ) {
     	float: left;
-        @include calc( width, '100% - 400px' );
+        @include calc( width, '100% - 300px' );
     }
 
     .woocommerce-EditAccountForm{
