--- a/style.css
+++ b/style.css
@@ -4059,6 +4059,11 @@ button:disabled {
   filter: grayscale(100%);
 }
 
+input[type="file"] {
+  display: flex;
+  padding: 10px;
+}
+
 h1,
 h2,
 h3,
@@ -5767,6 +5772,11 @@ footer#colophon {
   bottom: 0;
   width: 50px;
   height: 50px;
+}
+
+.media-toolbar .search-form:after, .media-toolbar
+.woocommerce-product-search:after {
+  content: none;
 }
 
 .search-form .search-field,
@@ -10456,9 +10466,8 @@ footer#colophon {
   .woocommerce-MyAccount-navigation {
     float: left;
     margin-bottom: 0;
-    max-width: 270px;
+    width: 270px;
     margin-right: 30px;
-    padding-right: 100px;
     border-right: 1px solid #eee;
   }
 }
@@ -10509,8 +10518,21 @@ footer#colophon {
   content: "\e634";
 }
 
+.woocommerce-MyAccount-navigation .woocommerce-MyAccount-navigation-link--support-tickets a:before {
+  content: "\e63b";
+}
+
+.woocommerce-MyAccount-navigation .woocommerce-MyAccount-navigation-link--following a:before {
+  content: "\e63d";
+}
+
+.woocommerce-MyAccount-navigation .woocommerce-MyAccount-navigation-link--rma-requests a:before {
+  content: "\e66f";
+}
+
 .woocommerce-MyAccount-navigation .woocommerce-MyAccount-navigation-link a {
   font-size: 15px;
+  white-space: nowrap;
   display: -webkit-box;
   display: -webkit-flex;
   display: flex;
@@ -10538,8 +10560,8 @@ footer#colophon {
 @media (min-width: 992px) {
   .woocommerce-MyAccount-content {
     float: left;
-    width: -webkit-calc( 100% - 400px);
-    width: calc( 100% - 400px);
+    width: -webkit-calc( 100% - 300px);
+    width: calc( 100% - 300px);
   }
 }
 
@@ -11010,17 +11032,42 @@ body:not(.has-dokan-sidebar).dokan-store.no-sidebar .dokan-single-store {
   }
 }
 
-.dokan-dashboard .dokan-table {
-  table-layout: auto;
-}
-
-.dokan-dashboard .dokan-table thead th {
-  word-break: normal;
-}
-
 .dokan-dashboard fieldset {
   border: 0;
   padding: 0;
+}
+
+.dokan-dashboard table {
+  width: auto;
+}
+
+.dokan-dashboard .dokan-table,
+.dokan-dashboard .table {
+  table-layout: auto;
+  width: 100%;
+}
+
+.dokan-dashboard .dokan-table thead th,
+.dokan-dashboard .table thead th {
+  word-break: normal;
+}
+
+.dokan-dashboard .btn {
+  padding-left: 15px;
+  padding-right: 15px;
+  background-color: #efefef;
+}
+
+.dokan-dashboard .dokan-form-control {
+  border-radius: 4px;
+}
+
+.dokan-dashboard .col-link {
+  white-space: nowrap;
+}
+
+.dokan-dashboard .col-link a {
+  white-space: nowrap;
 }
 
 @media (min-width: 992px) {
