--- a/assets/css/sass/dokan/support.scss
+++ b/assets/css/sass/dokan/support.scss
@@ -1,3 +1,10 @@
+// General
+.list-unstyled {
+	margin: 0;
+	padding-left: 0;
+	list-style: none;
+}
+
 // Dashboard
 .dokan-dashboard {
 	&.single-product {
