--- a/assets/css/sass/woocommerce/woocommerce.scss
+++ b/assets/css/sass/woocommerce/woocommerce.scss
@@ -1,6 +1,20 @@
 // Variables
 $size: 40px;
 
+// Out of stock label
+.woostify-out-of-stock-label {
+	position: absolute;
+	left: 10px;
+	top: 10px;
+	z-index: 2;
+	background-color: #818486;
+	color: #fff;
+	padding: 5px;
+	line-height: 1;
+	font-size: 12px;
+	pointer-events: none;
+}
+
 // Updating...
 .processing {
 	pointer-events: none;
