update hook sale tag

--- a/assets/css/sass/woocommerce/product-page.scss
+++ b/assets/css/sass/woocommerce/product-page.scss
@@ -372,7 +372,7 @@
 	position: absolute;
 	z-index: 100;
 	right: 15px;
-	top: 15px;
+	bottom: 15px;
 	font-size: 20px;
 	width: 40px;
 	height: 40px;
