--- a/style.css
+++ b/style.css
@@ -8339,7 +8339,7 @@ footer#colophon {
   position: absolute;
   z-index: 100;
   right: 15px;
-  top: 15px;
+  bottom: 15px;
   font-size: 20px;
   width: 40px;
   height: 40px;
